--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <title>Shreyas's Personal Site</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
-
   <body style="background-color: white;">
     <table cellspacing="20">
       <tr>
         <td><img src="images/mypic.png" alt="Shreyas's profile picture"></td>
         <td><h1>Shreyas Hosmani</h1>
         <p><em>Founder and CTO of <strong><a href="https://gathrr.in">Gathrr</a></strong>.</em></p>
-        <p>I am a Flutter Developer and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+        <p>I am a Flutter Developer and Web Developer. I ❤️ coffee and brew my own beers 🍺.</p></td>
       </tr>
     </table>
     <hr>
-    <h3>Books and Teaching</h3>
+    <h3>Books I Extremely Love</h3>
     <ul>
-      <li>The Complete iOS App Development Bootcamp</li>
-      <li>The Complete Web Development Bootcamp</li>
+      <li>Zero To One</li>
+      <li>The 100$ Start Up</li>
+      <li>How I Almost Blew It</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -32,16 +32,20 @@
       </thead>
       <tbody>
         <tr>
-          <td>2009-2010</td>
-          <td>Researcher at The Institute of Cognitive Neurosciences</td>
+          <td>May 2019 - Present</td>
+          <td>Technical Director | Gathrr</td>
         </tr>
         <tr>
-          <td>2010-2013</td>
-          <td>Lead Developer at Tempo App</td>
+          <td>Jan 2019 - Jun 2019</td>
+          <td>Android Developer | Spaising Technologies</td>
         </tr>
         <tr>
-          <td>2013-2015</td>
-          <td>Clinical Doctor at the National Health Service</td>
+          <td>May 2019 - Present</td>
+          <td>Comittee Member and Technical Lead | Tathastu</td>
+        </tr>
+        <tr>
+          <td>Jan 2016 - Present</td>
+          <td>Founder-President | U&V Foundation</td>
         </tr>
       </tbody>
     </table>
@@ -62,7 +66,7 @@
       </tr>
     </table>
     <hr>
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contact-me.html">Contact Me</a>
+    <!--<a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>-->
   </body>
 </html>
