--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><img src="images/mypic.png" alt="Shreyas's profile picture"></td>
         <td><h1>Shreyas Hosmani</h1>
         <p><em>Founder and CTO of <strong><a href="https://gathrr.in">Gathrr</a></strong>.</em></p>
-        <p>I am a Flutter Developer and Web Developer. I ❤️ coffee and brew my own beers 🍺.</p></td>
+        <p>I am a Flutter Developer and Web Developer. I ❤️ coffee, work and travel, and brew my own beers 🍺.</p></td>
       </tr>
     </table>
     <hr>
