--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <tr>
         <td><img src="images/mypic.png" alt="Shreyas's profile picture"></td>
         <td><h1>Shreyas Hosmani</h1>
-        <p><em>Founder and CTO of <strong><a href="https://gathrr.in">Gathrr</a></strong>.</em></p>
+        <p><em>Co-Founder and CTO of <strong><a href="https://gathrr.in">Gathrr</a></strong>.</em></p>
         <p>I am a Flutter Developer and Web Developer. I ❤️ coffee, work and travel, and brew my own beers 🍺.</p></td>
       </tr>
     </table>
